aanpassingen aan de views en 2 nieuwe views aangemaakt

--- a/src/Views/Home/Index.cshtml
+++ b/src/Views/Home/Index.cshtml
@@ -2,7 +2,9 @@
     ViewData["Title"] = "Homepagina";
 }
 
-<section id="imageWrapper" class="mb-2"></section>
+<section id="imageWrapper" class="mb-2">
+    <img src="~/img/homeBanner.png" alt="plaatje van orthopedagoog" class="rounded mx-auto d-block img-fluid">
+</section>
 
 <section id="cardsWrapper">
     <div class="container">
