--- a/src/Views/Shared/_Layout.cshtml
+++ b/src/Views/Shared/_Layout.cshtml
@@ -39,19 +39,18 @@
             @RenderBody()
         </div>
     </main>
-
     <footer class="border-top footer pt-5 pb-3 mt-3">
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <h3>Logo</h4>
+                    <h3>De praktijk</h3>
                     <ul>
                         <li><a href="tel:+31612345678">+31612345678</a></li>
                         <li><a asp-action="Index">Contact</a></li>
                     </ul>
                 </div>
                 <div class="col-md-4">
-                    <h3>Volg Ons</h4>
+                    <h3>Volg Ons</h3>
                     <ul>
                         <li>Facebook</li>
                         <li>Instagram</li>
@@ -60,7 +59,7 @@
                     </ul>
                 </div>
                 <div class="col-md-4">
-                    <h3>Privacy</h4>
+                    <h3>Privacy</h3>
                     <ul>
                         <li><a asp-action="Privacy">Privacyverklaring</a></li>
                         <li>Privacybeleid</li>
