--- a/src/Areas/Identity/Pages/Account/Register.cshtml
+++ b/src/Areas/Identity/Pages/Account/Register.cshtml
@@ -2,6 +2,11 @@
 @model RegisterModel
 @{
     ViewData["Title"] = "Register";
+    var list = new List<SelectListItem> {  new SelectListItem { Text = "Moderator", Value = "1", Selected=true},
+                                    new SelectListItem { Text = "Hulpverlener", Value = "2"},
+                                    new SelectListItem { Text = "Client", Value = "3"},
+                                    new SelectListItem { Text = "Voogd", Value = "4"}
+                                   };
 }
 
 <h1>@ViewData["Title"]</h1>
@@ -26,6 +31,11 @@
                 <label asp-for="Input.ConfirmPassword"></label>
                 <input asp-for="Input.ConfirmPassword" class="form-control" />
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+               <label asp-for="Input.Functie"></label>
+               <select asp-for="Input.Functie" asp-items="@list"></select>
+               <span asp-validation-for="Input.Functie" class="text-danger"></span>
             </div>
             <button type="submit" class="btn btn-primary">Register</button>
         </form>
