--- a/src/Views/Shared/_Layout.cshtml
+++ b/src/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Moderator" asp-action="Hulpverlener">Hulpverleners</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Moderator" asp-action="">Clienten</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Moderator" asp-action="Client">Clienten</a>
                             </li>
                         }
                         else
