--- a/src/Views/Hulpverlener/Delete.cshtml
+++ b/src/Views/Hulpverlener/Delete.cshtml
@@ -1,4 +1,7 @@
 @model Hulpverlener
+@using Microsoft.AspNetCore.Identity
+@inject SignInManager<IdentityUser> SignInManager
+@inject UserManager<IdentityUser> UserManager
 
 @{
     ViewData["Title"] = "Delete";
@@ -136,6 +139,13 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        @if(SignInManager.IsSignedIn(User) && User.IsInRole("Moderator"))
+        {
+            <a asp-controller="Moderator" asp-action="Hulpverlener">Back to List</a>
+        }
+        else
+        {
+            <a asp-action="Index">Back to List</a>
+        }
     </form>
 </div>
