--- a/src/Views/Hulpverlener/Details.cshtml
+++ b/src/Views/Hulpverlener/Details.cshtml
@@ -1,4 +1,7 @@
 @model Hulpverlener
+@using Microsoft.AspNetCore.Identity
+@inject SignInManager<IdentityUser> SignInManager
+@inject UserManager<IdentityUser> UserManager
 
 @{
     ViewData["Title"] = "Details";
@@ -134,5 +137,12 @@
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+     @if(SignInManager.IsSignedIn(User) && User.IsInRole("Moderator"))
+    {
+        <a asp-controller="Moderator" asp-action="Hulpverlener">Back to List</a>
+    }
+    else
+    {
+        <a asp-action="Index">Back to List</a>
+    }
 </div>
