--- a/src/Views/Shared/_Layout.cshtml
+++ b/src/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                 </button>
                 <div class="navbar-collapse collapse">
                     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-<<<<<<< HEAD
+
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
@@ -34,8 +34,7 @@
                             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Orthopedagogen">Orthopedagogen</a>
                         </li>
                     </ul>
-=======
-                        @if(SignInManager.IsSignedIn(User) && User.IsInRole("Moderator"))
+                        @* @if(SignInManager.IsSignedIn(User) && User.IsInRole("Moderator"))
                         {
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
@@ -58,10 +57,10 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="">Orthopedagogen</a>
                             </li>
-                        }
+                        } *@
                     </ul>
                     <partial name="_LoginPartial"></partial>
->>>>>>> toon-feature-backend
+
                 </div>
             </div>
         </nav>
