--- a/src/Views/Moderator/Client.cshtml
+++ b/src/Views/Moderator/Client.cshtml
@@ -11,6 +11,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.UserName)
             </th>
+             <th>
+                @Html.DisplayNameFor(model => model.magChatten)
+            </th>
         </tr>
     </thead>
     <tbody>
@@ -19,10 +22,15 @@
             <td>
                 @Html.DisplayFor(modelItem => item.UserName)
             </td>
+             <td>
+                @Html.DisplayFor(modelItem => item.magChatten)
+            </td>
             <td>
                 @* <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a> *@
+                <a asp-action="Blokkeer" asp-route-id="@item.Id">Blokkeer</a>
+                <a asp-action="Deblokkeer" asp-route-id="@item.Id">Deblokkeer</a>
             </td>
         </tr>
 }
