--- a/src/Views/Chat/Index.cshtml
+++ b/src/Views/Chat/Index.cshtml
@@ -2,8 +2,7 @@
     <div class="container">
         <div class="row">&nbsp;</div>
         <div class="row">
-            <div class="col-2">User</div>
-            <div class="col-4"><input type="text" id="userInput" /></div>
+            <div class="col-4"><input type="hidden" for="User" id="userInput" value=@ViewBag.UserName></div>
         </div>
         <div class="row">
             <div class="col-2">Message</div>
