--- a/src/Views/Chat/Index.cshtml
+++ b/src/Views/Chat/Index.cshtml
@@ -25,5 +25,6 @@
             <ul id="messagesList"></ul>
         </div>
     </div>
+    @ViewBag.Account;
 <script src="~/js/signalr/dist/browser/signalr.js"></script>
 <script src="~/js/chat.js"></script>
