Chat Username Update

--- a/src/Areas/Identity/Pages/Account/Register.cshtml
+++ b/src/Areas/Identity/Pages/Account/Register.cshtml
@@ -30,6 +30,13 @@
             <input asp-for="Input.ConfirmPassword" class="form-control" />
             <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
         </div>
+
+        <div class="form-group">
+            <label asp-for="Input.Voornaam">Voornaam</label>
+            <input asp-for="Input.Voornaam" class="form-control" />
+            <span asp-validation-for="Input.Voornaam" class="text-danger"></span>
+        </div>
+
         <div class="form-group">
             <label asp-for="Input.Functie"></label>
             <select asp-for="Input.Functie" asp-items="@list"></select>
