--- a/src/Views/Aanmelding/Create.cshtml
+++ b/src/Views/Aanmelding/Create.cshtml
@@ -2,6 +2,12 @@
 
 @{
     ViewData["Title"] = "Create";
+    var Hulpverleners = ViewData["Hulpverlener"];
+    List<SelectListItem> List = new List<SelectListItem>();
+    foreach(var hulp in (List<Hulpverlener>)Hulpverleners)
+    {
+        List.Add(new SelectListItem() { Text = hulp.Voornaam, Value = hulp.Id.ToString() });
+    }
 }
 
 <h1>Create</h1>
@@ -36,6 +42,11 @@
                 <label asp-for="Leeftijdscategorie" class="control-label"></label>
                 <input asp-for="Leeftijdscategorie" class="form-control" />
                 <span asp-validation-for="Leeftijdscategorie" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+               <label asp-for="Hulpverlener"></label>
+               <select asp-for="Hulpverlener" asp-items="@List"></select>
+               <span asp-validation-for="Hulpverlener" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
