--- a/src/Views/Shared/_Layout.cshtml
+++ b/src/Views/Shared/_Layout.cshtml
@@ -33,6 +33,13 @@
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Orthopedagogen">Orthopedagogen</a>
                         </li>
+
+                        @if(SignInManager.IsSignedIn(User) && User.IsInRole("Client"))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link" asp-area="" asp-controller="Chat" asp-action="Index">Chat</a>
+                            </li>
+                        }
                     </ul>
                         @* @if(SignInManager.IsSignedIn(User) && User.IsInRole("Moderator"))
                         {
