Berichten opslaan in database

--- a/src/Views/Chat/Index.cshtml
+++ b/src/Views/Chat/Index.cshtml
@@ -3,6 +3,7 @@
         <div class="row">&nbsp;</div>
         <div class="row">
             <div class="col-4"><input type="hidden" for="User" id="userInput" value=@ViewBag.UserName></div>
+            <div class="col-4"><input type="hidden" for="UserId" id="userId" value=@ViewBag.uId></div>
         </div>
         <div class="row">
             <div class="col-2">Message</div>
