--- a/src/wwwroot/css/site.css
+++ b/src/wwwroot/css/site.css
@@ -81,6 +81,7 @@ button.accept-policy {
 /* #signupWrapper{} */
 
 .form-box {
-  padding: 20px 20px;
+  padding: 20px;
   background-color: #D6E5E3;
+  border-radius: 10px;
 }
