--- a/src/Views/Chat/Index.cshtml
+++ b/src/Views/Chat/Index.cshtml
@@ -4,6 +4,7 @@
         <div class="row">
             <div class="col-4"><input type="hidden" for="User" id="userInput" value=@ViewBag.UserName></div>
             <div class="col-4"><input type="hidden" for="UserId" id="userId" value=@ViewBag.uId></div>
+            <div class="col-4"><input type="hidden" for="accountid" id="accountid" value=@ViewBag.accountid></div>
         </div>
         <div class="row">
             <div class="col-2">Message</div>
