--- a/src/Views/Aanmelding/Create.cshtml
+++ b/src/Views/Aanmelding/Create.cshtml
@@ -23,6 +23,11 @@
                 <span asp-validation-for="Achternaam" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="BSN" class="control-label"></label>
+                <input asp-for="BSN" class="form-control" />
+                <span asp-validation-for="BSN" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Email" class="control-label"></label>
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
@@ -36,6 +41,11 @@
                 <label asp-for="Leeftijdscategorie" class="control-label"></label>
                 <input asp-for="Leeftijdscategorie" class="form-control" />
                 <span asp-validation-for="Leeftijdscategorie" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="NaamVoogd" class="control-label"></label>
+                <input asp-for="NaamVoogd" class="form-control" />
+                <span asp-validation-for="NaamVoogd" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
