--- a/src/Views/Aanmelding/Details.cshtml
+++ b/src/Views/Aanmelding/Details.cshtml
@@ -23,6 +23,12 @@
             @Html.DisplayFor(model => model.Achternaam)
         </dd>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.BSN)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.BSN)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Email)
         </dt>
         <dd class = "col-sm-10">
@@ -39,6 +45,12 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Leeftijdscategorie)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.NaamVoogd)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.NaamVoogd)
         </dd>
     </dl>
 </div>
