--- a/src/Views/Aanmelding/Index.cshtml
+++ b/src/Views/Aanmelding/Index.cshtml
@@ -19,6 +19,9 @@
                 @Html.DisplayNameFor(model => model.Achternaam)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.BSN)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Email)
             </th>
             <th>
@@ -26,6 +29,9 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Leeftijdscategorie)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.NaamVoogd)
             </th>
             <th></th>
         </tr>
@@ -40,6 +46,9 @@
                 @Html.DisplayFor(modelItem => item.Achternaam)
             </td>
             <td>
+                @Html.DisplayFor(modelItem => item.BSN)
+            </td>
+            <td>
                 @Html.DisplayFor(modelItem => item.Email)
             </td>
             <td>
@@ -47,6 +56,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Leeftijdscategorie)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.NaamVoogd)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.AanmeldingId">Edit</a> |
